------------------------------------------------------
26/04/04 Release of ir-tcl-1.4.2

11/29/03 Added getXml method to retrieve XML record. (Franck Falcoz).

05/03/03 IRTCL.DLL is using Tcl stubs on Win32. 

05/03/03 APDU dump : written to same file as log when DEBUG is enabled.

05/03/03 Sets largeSetLowerBound to 1 instead of 2 by default.

05/03/03 Fix bug with idAuthentication that didn't work for empty group.

------------------------------------------------------
02/24/03 Release of ir-tcl-1.4.1

02/18/03 Updated for YAZ 2.0.

01/30/03 Bug fix: IrTcl aborted if it received  "unexpected" response PDU's.

09/13/02 Debian package.

03/20/02 searchResult method (retrives USR:SearchResult-1 from
         SearchResponse)
------------------------------------------------------
12/04/01 Release of ir-tcl-1.4

12/03/01 Changed Implemenation strings for IrTcl.

12/03/01 Configure deals with Tcl layout for Debian GNU/Linux.

03/27/01 Fixed bug in do_responseStatus. Thanks to Rustam T. Usmanov
          <rustam@unilib.neva.ru>

03/26/01 Fixed bug in ir_deleteDiags. Thanks to Rustam T. Usmanov
          <rustam@unilib.neva.ru>

02/09/01 Updated for Tcl8.1 and upwards where internal encoding is UTF-8.
         Queries and Scan star terms are converted to external encoding.

12/12/99 Updated list of preconfigured targets for test client.

------------------------------------------------------
12/10/99 Release of ir-tcl-1.3

03/22/99 Added Z39.50 sort. The following methods have been implemented:
         sort (sends sort PDU), sortResponse (specifies sort handle) and
         sortStatus (returns sort status - after response).

03/19/99 Added support for Tk8.1/Tcl8.1.

06/10/98 Added ir-version command.

05/20/98 Updated Explain record support.

08/28/97 Added support for Tk8.0/Tcl8.0.

05/01/97 Added ir-log command.

04/30/97 Added shared library support.

04/13/97 Added ir-log-init command.

11/14/96 Added some Explain documentation.
