@@ -1,3 +1,6 @@
+
+05/10/04 Do not use obsolete YAZ defines.
+
 ------------------------------------------------------
 26/04/04 Release of ir-tcl-1.4.2
 
@@ -173,4 +176,4 @@
 ------------------------------------------------------
 06/19/95 Release of ir-tcl-1.0b
 
-$Id: NEWS,v 1.2 2004-04-26 09:09:06 adam Exp $
+$Id: NEWS,v 1.3 2004-05-10 08:38:45 adam Exp $
